--- a/quickshell/translations/template.json
+++ b/quickshell/translations/template.json
@@ -14537,5 +14537,47 @@
     "context": "Keyboard hints when enter-to-paste is enabled",
     "reference": "",
     "comment": ""
+  },
+  {
+    "term": "What's New",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Read Full Release Notes",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Read Full Release Notes",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Got It",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Caps Lock is on",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "↑/↓: Nav • Space: Expand • Enter: Action/Expand • E: Text",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
   }
 ]
