--- a/quickshell/translations/poexports/fr.json
+++ b/quickshell/translations/poexports/fr.json
@@ -769,6 +769,9 @@
   "Caps Lock Indicator": {
     "Caps Lock Indicator": "Indicateur Verr. Maj."
   },
+  "Caps Lock is on": {
+    "Caps Lock is on": ""
+  },
   "Center Section": {
     "Center Section": "Partie centrale"
   },
@@ -6429,5 +6432,8 @@
   },
   "• yyyy - Year (2024)": {
     "• yyyy - Year (2024)": "• yyyy - Année (2024)"
+  },
+  "↑/↓: Nav • Space: Expand • Enter: Action/Expand • E: Text": {
+    "↑/↓: Nav • Space: Expand • Enter: Action/Expand • E: Text": ""
   }
 }
